--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,9 @@
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
-.AppStatistics {
+.AppStatistics,
+.AppPickWell {
   max-width: 590px;
+  margin-bottom: 50px;
 }
 
