--- a/src/components/ui/block/index.css
+++ b/src/components/ui/block/index.css
@@ -3,6 +3,23 @@
   padding: 30px;
 }
 
+.block.h_collaple {
+  width: 55px;
+  padding: 30px 0;
+}
+
+.block.h_collaple .block__header {
+  flex-direction: column-reverse;
+  margin-bottom: 0;
+}
+
+.block.h_collaple .block__title {
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  margin-top: 15px;
+  margin-right: 20px;
+}
+
 .block__header {
   display: flex;
   align-items: center;
