--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,18 @@
 
 .App {
-  padding: 100px 50px 50px 200px;
+  padding: 45px 0 0 100px;
+  display: grid;
+  grid-template-columns: 32% 1fr auto;
+  grid-template-rows: minmax(260px, auto) 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 
-.App .block {
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-}
-
-.App > div {
-  margin-bottom: 50px;
-  width: 100%;
-}
-
-.AppStatistics,
-.AppPickWell {
-  max-width: 590px;
-}
-
-.AppEvents {
-  max-width: 1230px;
-}
-
-.AppLegends {
-  max-width: 355px;
-}
-
-.AppMap {
-  max-width: 877px;
-}
+.AppStatistics { grid-area: 1 / 1 / 2 / 2; }
+.AppPickWell { grid-area: 2 / 1 / 3 / 2; margin-top: -1px; }
+.AppEvents { grid-area: 1 / 2 / 2 / 4; margin-left: -1px; }
+.AppMap { grid-area: 2 / 2 / 3 / 3; margin-top: -1px; margin-left: -1px; }
+.AppLegends { grid-area: 2 / 3 / 3 / 4; margin-top: -1px; margin-left: -1px; }
 
 .AppMap h4 {
   margin-bottom: 40px;
