--- a/src/components/ui/statusSelect/index.css
+++ b/src/components/ui/statusSelect/index.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   margin-right: 30px;
+  margin-left: 10px;
 }
 
 .status-select__item {
@@ -24,4 +25,5 @@
   height: 20px;
   margin-right: 15px;
   border-radius: 50%;
+  flex: none;
 }
