--- a/src/components/vidgets/statistics/index.css
+++ b/src/components/vidgets/statistics/index.css
@@ -49,11 +49,13 @@
 .statistics__charts {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .statistics__chart {
-  max-width: 30%;
+  max-width: 230px;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .statistics__chart-title {
