--- a/src/components/ui/block/index.css
+++ b/src/components/ui/block/index.css
@@ -6,8 +6,13 @@
 }
 
 .block.h_collaple {
-  width: 55px;
-  padding: 30px 0;
+  width: 55px !important;
+  padding: 30px 0 !important;
+  flex: none !important;
+}
+
+.block.v_collaple .block__header {
+  margin-bottom: 0;
 }
 
 .block.h_collaple .block__header {
