--- a/src/components/ui/modal/index.css
+++ b/src/components/ui/modal/index.css
@@ -8,6 +8,8 @@
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   padding: 30px;
   background-color: #fff;
+  max-height: calc(100vh - 2rem);
+  overflow-y: auto;
 }
 
 .app-modal__close {
