--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -21,6 +21,9 @@
 
 .app-header__nav svg {
   flex: none;
+  width: 20px;
+  height: 20px;
+  fill: #fff;
 }
 
 .app-header__nav a {
@@ -74,6 +77,13 @@
   flex: none;
   padding-left: 10px;
   cursor: pointer;
+}
+
+.app-header__user svg {
+  width: 20px;
+  height: 20px;
+  flex: none;
+  fill: #fff;
 }
 
 .app-header__user-name {
